--- a/FCC Pomodoro Timer/index.html
+++ b/FCC Pomodoro Timer/index.html
@@ -2,74 +2,97 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Pomodoro Timer</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Pomodoro Timer</title>
+    <link href="Content/nouislider.min.css" rel="stylesheet" />
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
 
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <link href="Content/style.css" rel="stylesheet" />
 
-	<link href="content/style.css" rel="stylesheet">
-	<!-- Bootstrap -->
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
+    <!-- Bootstrap -->
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
-
 <body>
-	<h1>Pomodoro Timer</h1>
-	<section class="container main">
-		<div class="row timer-settings">
-			<!-- break timer settings-->
-			<div class="col-md-6">
-				<button class="btn  btn-round" id="breakMinusFive">-5</button>
-				<button class="btn  btn-round" id="breakMinusOne">-1</button>
-				<input type="text" size="2" readonly id="breakLength" value="6">
-				<button class="btn  btn-round timer-button" id="breakPlusOne">+1</button>
-				<button class="btn  btn-round timer-button" id="breakPlusFive">+5</button>
-			</div>
-			<!-- sessiom timer settings-->
-			<div class="col-md-6">
-				<button class="btn  btn-round" id="sessionMinusFive">-5</button>
-				<button class="btn  btn-round" id="sessionMinusOne">-1</button>
-				<input type="text" size="2" readonly id="sessionLength" value="25 ">
-				<button class="btn btn-round timer-button" id="sessionPlusOne">+1</button>
-				<button class="btn btn-round timer-button" id="sessionPlusFive">+5</button>
-			</div>
-		</div>
+    <section class='container-fluid'>
+        <div class="row">
+            <div class="col-xs-12 text-center">
+                <h1 class='text-primary'>Pomodoro Timer!</h1>
+                <h2 id="status">Work</h2>
+            </div>
+        </div>
 
-		<div id="timer-row" class="row">
-			<div class="col-md-4">
-				<button class="btn" id="startSession">Start Session</button>
+        <div class="row">
 
-			</div>
+        </div>
+        <div class="row timer-settings text-center">
+            <!-- break timer settings-->
+            <div class="col-md-6">
+                <h3>Break Time In Minutes</h3>
+                <!--<button class="btn  btn-round" id="breakMinusFive">-5</button>
+                <button class="btn  btn-round" id="breakMinusOne">-1</button>-->
 
-			<div class="col-md-8">
-				<input type="text" size="8" readonly id="timer" value="1">
+                <input type="number" min="1" max="99" step="1" id="breakLength">
 
-			</div>
-		</div>
-		<div class="row" id="progessbar">
-			<div class=col-md-12>
-				<!-- Progress Bar -->
-				<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-					<span class="sr-only">75% Complete</span>
-				</div>
-			</div>
-		</div>
-	</section>
+                <div id="breakSlider"></div>
+                <!--<button class="btn  btn-round timer-button" id="breakPlusOne">+1</button>
+                <button class="btn  btn-round timer-button" id="breakPlusFive">+5</button>-->
+            </div>
+            <!-- sessiom timer settings-->
+            <div class="col-md-6">
+                <h3>Work Time In Minutes</h3>
+                <!--<button class="btn  btn-round" id="sessionMinusFive">-5</button>-->
+                <!--<button class="btn  btn-round" id="sessionMinusOne">-1</button>-->
+                <input type="number" min="1" max="99" step="1" id="sessionLength">
+                <div id="sessionSlider"></div>
+                <!--<button class="btn btn-round timer-button" id="sessionPlusOne">+1</button>
+                <button class="btn btn-round timer-button" id="sessionPlusFive">+5</button>-->
+            </div>
+        </div>
+        <div class="row  text-center" id="controls">
+            <div class="col-md-4">
+                <button class="btn" id="sessionStart">Start</button>
+            </div>
+            <div class="col-md-4">
+                <button class="btn" id="sessionPause">Pause</button>
+            </div>
+            <div class="col-md-4">
+                <button class="btn" id="sessionReset">Reset</button>
+            </div>
+        </div>
+        <div id="timer-row" class="row">
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
-	<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
-	<script src='script.js'></script>
+            <div class="col-md-12 text-center">
+                <input type="text" size="8" readonly id="timer" value="25">
+            </div>
+        </div>
+        <!--<div class="row" >-->
+        <div class="progress center-block">
+            <!-- Progress Bar -->
+            <div class="progress-bar" role="progressbar" id="progBar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0">
+                0% Complete
+            </div>
+            <!--</div>-->
+        </div>
+    </section>
 
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+    <!--<script src="Scripts/jquery-2.2.0.min.js"></script>-->
+    <script src="Scripts/bootstrap.min.js"></script>
+
+    <script src="Scripts/nouislider.min.js"></script>
+    <script src="Scripts/wNumb.js"></script>
+    <script src="Scripts/script.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
 </body>
-
 </html>
